--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,8 @@
         </div>
     </nav>
 
-    <header>
+<div class="main">
+    <div class="header">
         <div class="header-container">
             <div>
                 <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></span>
@@ -59,7 +60,48 @@
                 </ul>
             </div>
         </div>
+    </div class="header">
 
-    </header>
+    <div class="main-container">
+        <div>
+            <h2>Your Projects</h2>
+            <div class="project-container">
+                <div class="project">
+                    <h3>Super Cool Project</h3>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="project">
+                    <h3>Less Cool Project</h3>
+                    <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="project">
+                    <h3>Impossible App</h3>
+                    <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="project">
+                    <h3>Easy Peasy App</h3>
+                    <p>"Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="project">
+                    <h3>Ad Blocker</h3>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="project">
+                    <h3>Money Maker</h3>
+                    <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h2>Announcements</h2>
+
+            </div>
+            <div>
+                <h2>Trending</h2>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
