--- a/Index.html
+++ b/Index.html
@@ -92,13 +92,40 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="additional-container">
             <div>
                 <h2>Announcements</h2>
-
+                <div>
+                    <div class="announcement">
+                        <h3>Site Maintenance</h3>
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Community Share Day</h3>
+                        <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
+                </div>
             </div>
             <div>
                 <h2>Trending</h2>
+                <div>
+                    <div class="trending">
+                        <h3>Super Cool Project</h3>
+                        <p>@username</p>
+                    </div>
+                    <div class="trending">
+                        <h3>Less Cool Project</h3>
+                        <p>@username</p>
+                    </div>
+                    <div class="trending">
+                        <h3>Impossible App</h3>
+                        <p>@username</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
