Added announcement and trending

--- a/Index.html
+++ b/Index.html
@@ -114,16 +114,16 @@
                 <h2>Trending</h2>
                 <div>
                     <div class="trending">
-                        <h3>Super Cool Project</h3>
-                        <p>@username</p>
+                        <p>@apple</p>
+                        <p>Super Cool Project</p>
                     </div>
                     <div class="trending">
-                        <h3>Less Cool Project</h3>
-                        <p>@username</p>
+                        <p>@grape</p>
+                        <p>Less Cool Project</p>
                     </div>
                     <div class="trending">
-                        <h3>Impossible App</h3>
-                        <p>@username</p>
+                        <p>@orange</p>
+                        <p>Impossible App</p>
                     </div>
                 </div>
             </div>
