Added hover effects

--- a/Index.html
+++ b/Index.html
@@ -144,16 +144,25 @@
                 <h2>Trending</h2>
                 <div>
                     <div class="trending">
-                        <p>@apple</p>
-                        <p>Super Cool Project</p>
+                        <img src="Images/apple.jpg" alt="Apple">
+                        <div>
+                            <p>@apple</p>
+                            <p>Super Cool Project</p>
+                        </div>
                     </div>
                     <div class="trending">
-                        <p>@grape</p>
-                        <p>Less Cool Project</p>
+                        <img src="Images/green-grapes.png" alt="Grape">
+                        <div>
+                            <p>@grape</p>
+                            <p>Less Cool Project</p>
+                        </div>
                     </div>
                     <div class="trending">
-                        <p>@orange</p>
-                        <p>Impossible App</p>
+                        <img src="Images/orange.jpg" alt="Orange">
+                        <div>
+                            <p>@orange</p>
+                            <p>Impossible App</p>
+                        </div>
                     </div>
                 </div>
             </div>
