Admin Dashboard is complete
Actually far from perfect but let's figure it out later.

--- a/Index.html
+++ b/Index.html
@@ -47,10 +47,11 @@
         </div>
         <div class="header-container">
             <div>
+                <img src="Images/apple.jpg" alt="Apple">
                 <ul>
-                    <li><img src="Images/apple.jpg" alt="Apple"></li>
-                    <li><a href="">Red Apple</a></li>
-                </ul>
+                    <li>Hi there,</li>
+                    <li>Red Apple (@apple)</li>
+                </ul>                
             </div>
             <div>
                 <ul>
@@ -146,21 +147,21 @@
                     <div class="trending">
                         <img src="Images/apple.jpg" alt="Apple">
                         <div>
-                            <p>@apple</p>
+                            <p class="username-tag">@apple</p>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
                     <div class="trending">
                         <img src="Images/green-grapes.png" alt="Grape">
                         <div>
-                            <p>@grape</p>
+                            <p class="username-tag">@grape</p>
                             <p>Less Cool Project</p>
                         </div>
                     </div>
                     <div class="trending">
                         <img src="Images/orange.jpg" alt="Orange">
                         <div>
-                            <p>@orange</p>
+                            <p class="username-tag">@orange</p>
                             <p>Impossible App</p>
                         </div>
                     </div>
